# vanedb

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml
docs/superpowers/plans/: 2026-05-29-rust-c-api.md
vanedb/: Cargo.toml
vanedb-capi/: Cargo.toml  build.rs  cbindgen.toml
vanedb-capi/include/: vanedb_rs_capi.h
vanedb-capi/src/: lib.rs
vanedb-capi/tests/: capi.rs
vanedb-py/: Cargo.toml  pyproject.toml
vanedb-py/src/: lib.rs
vanedb-py/tests/: test_numpy_batch.py  test_vanedb.py
vanedb-wasm/: Cargo.toml
vanedb-wasm/src/: lib.rs
vanedb-wasm/tests/: web.rs
vanedb/benches/: distance_bench.rs  hnsw_bench.rs  store_bench.rs
vanedb/examples/: profile_hnsw_build.rs
vanedb/src/: error.rs  lib.rs  mmap.rs
vanedb/src/distance/: avx2.rs  mod.rs  neon.rs  scalar.rs
vanedb/src/gpu/: cuda.rs  metal.rs  mod.rs
vanedb/src/hnsw/: mod.rs  persistence.rs
vanedb/src/store/: mod.rs  search_result.rs  vector_store.rs
vanedb/tests/: corruption_tests.rs  gpu_tests.rs  hnsw_tests.rs  mmap_tests.rs  property_tests.rs
