[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vanedb"
version = "0.1.0"
description = "Embeddable vector database for edge AI"
requires-python = ">=3.9"
license = "MIT"
keywords = ["vector", "database", "embeddings", "similarity-search"]

[tool.maturin]
features = ["pyo3/extension-module"]
