[package]
name = "vanedb"
version = "0.1.0"
edition = "2021"
description = "Embeddable vector database for edge AI"
license = "MIT"
repository = "https://github.com/vanedb/vanedb"
keywords = ["vector", "database", "embeddings", "simd", "similarity-search"]
categories = ["database", "science"]

[features]
default = []
mmap = ["dep:memmap2"]
gpu-metal = ["dep:metal", "dep:objc"]
gpu-cuda = ["dep:cudarc"]

[dependencies]
parking_lot = "0.12"
memmap2 = { version = "0.9", optional = true }
metal = { version = "0.33", optional = true }
objc = { version = "0.2", optional = true }
cudarc = { version = "0.19", optional = true }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "distance_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "hnsw_bench"
harness = false
